--- a/src/classes/Beacon.cls
+++ b/src/classes/Beacon.cls
@@ -1,18 +1,18 @@
 global class Beacon {
 
-	global static Boolean registerLevel(ILevel level){
+	global static Boolean registerAdventure(IAdventure adventure){
 
-		String className = level.getFullyQualifiedClass();
+		String className = adventure.getFullyQualifiedClass();
 		Integer settingKey = className.hashCode();
 
 		if(className == null)
 			return false;
 
-		Level__c l = Level__c.getInstance(String.valueOf(settingKey));
+		Adventure__c l = Adventure__c.getInstance(String.valueOf(settingKey));
 		if(l != null)
 			return false;
 
-		l = new Level__c(name=String.valueOf(settingKey), Class_Name__c=className);
+		l = new Adventure__c(name=String.valueOf(settingKey), Class_Name__c=className);
 		insert l;
 
 		return true;
@@ -51,8 +51,8 @@ global class Beacon {
 
 	}
 
-	global static void markQuestionAnswered(IQuestion question){
-		Question_Post__c qp = Question_Post__c.getInstance(LevelWrapper.settingKey(question.getFullyQualifiedClass()));
+	global static void markQuestAnswered(IQuest quest){
+		Quest_Post__c qp = Quest_Post__c.getInstance(AdventureWrapper.settingKey(quest.getFullyQualifiedClass()));
 		if(qp != null){
 			qp.Answered__c = true;
 			update qp;
