Commit of basic adventure building system. This will allow the creation of quests and adventures that can be downloaded as files and then imported and setup as pre the regular instructions. Testing to be done as well as implementing cleaner UI.

--- a/src/classes/QuestFile.cls
+++ b/src/classes/QuestFile.cls
@@ -13,6 +13,7 @@ public class QuestFile {
 		public String Answer {get; set;}
 		public String Response {get; set;}
 		public List<String> CorrectAudio {get; set;}
+		public String AudioStrings {get; set;}
 	}
 
 }
