Updates from the London World Tour effort

--- a/src/classes/QuestFile.cls
+++ b/src/classes/QuestFile.cls
@@ -7,12 +7,19 @@ public class QuestFile {
 	public String LoadingText {get; set;}
 	public String Question {get; set;}
 	public List<Answer> Answers {get; set;}
+	public List<WrongAnswer> IncorrectResponses {get; set;}
 	public String NextQuest {get; set;}
+	public String CorrectImageUrl {get; set;}
 
 	public class Answer{
 		public String Answer {get; set;}
 		public String Response {get; set;}
 		public List<String> CorrectAudio {get; set;}
+	}
+
+	public class WrongAnswer{
+		public String Response {get; set;}
+		public List<String> WrongAudio {get; set;}
 	}
 
 }
