--- a/src/classes/QuestFile.cls
+++ b/src/classes/QuestFile.cls
@@ -15,6 +15,8 @@ public class QuestFile {
 		public String Answer {get; set;}
 		public String Response {get; set;}
 		public List<String> CorrectAudio {get; set;}
+		public String Action {get; set;}
+		public Boolean Complete {get; set;}
 	}
 
 	public class WrongAnswer{
