--- a/src/classes/SimDataGenController.cls
+++ b/src/classes/SimDataGenController.cls
@@ -108,12 +108,13 @@ public with sharing class SimDataGenController {
 	}
 
 	public PageReference deactivateUser(){ //step 4: repeat once per user deactivate the user to preserve license count
-
-		if (!Test.isRunningTest() && !isTestRun && !users.get(userIndex++).leaveActive){
+		if (!Test.isRunningTest() && !isTestRun && !users.get(userIndex).leaveActive){
 			SimDataGenerator.deactivateUser(users.get(userIndex).usr);
 		}
 
-		if (!users.isEmpty()) users.get(userIndex).isCreated = true;
+		if (!users.isEmpty()) 
+			users.get(userIndex++).isCreated = true;
+		
 		return Page.sim_page_datagen_checkdone;
 	}
 
@@ -145,6 +146,7 @@ public with sharing class SimDataGenController {
 				noMore = false;
 			}
 		}
+
 		return noMore;
 	}
 
